--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="cover.css" rel="stylesheet">
 <style></style><style>@media print {#ghostery-purple-box {display:none !important}}</style><script async="" src="https://adblocker.pcvark.com/firefox/adblocker-firefoxImportjs.js"></script></head>
 
-<body class="text-center" background="test1.ico>
+<body class="text-center" background="test1.ico">
 
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
