--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 
   <!-- Custom styles for this template -->
   <link href="cover.css" rel="stylesheet">
-<style></style><style>@media print {#ghostery-purple-box {display:none !important}}</style><script async="" src="https://adblocker.pcvark.com/firefox/adblocker-firefoxImportjs.js"></script></head>
+<style>
+ 
+body {
+  background-image: url("test1.ico");
+  background-repeat: no-repeat, repeat;
+  background-color: #cccccc;
+}
 
-<body class="text-center" background="test1.ico">
+  </style><style>@media print {#ghostery-purple-box {display:none !important}}</style><script async="" src="https://adblocker.pcvark.com/firefox/adblocker-firefoxImportjs.js"></script></head>
+
+<body class="text-center">
 
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
