chg background image

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <style>
  
 body {
-  background-image: url("test1.ico");
-  background-repeat: no-repeat, repeat;
+  background-image: url("bd.png");
+  background-repeat: no-repeat;
   background-color: #cccccc;
 }
 
