--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <style>
  
 body {
-  background-image: url("test.ico");
+  background-image: url("test1.ico");
   background-repeat: repeat;
-
+  background-color: #cccccc;
 }
 
   </style><style>@media print {#ghostery-purple-box {display:none !important}}</style><script async="" src="https://adblocker.pcvark.com/firefox/adblocker-firefoxImportjs.js"></script></head>
