--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <style>
  
 body {
-  background-image: url("test1.ico");
+  background-image: url("bd.png");
   background-repeat: repeat;
   background-color: #cccccc;
 }
