--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 body {
   background-image: url("bd.png");
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-color: #cccccc;
 }
 
