--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <style>
  
 body {
-  background-image: url("bd.png");
+  background-image: url("papers.png");
   background-repeat: no-repeat;
   background-color: #cccccc;
 }
