--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
  
 body {
   background-image: url("bkgdtexture.png");
-  background-repeat: repeat;
   background-color: #cccccc;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
   </style><style>@media print {#ghostery-purple-box {display:none !important}}</style><script async="" src="https://adblocker.pcvark.com/firefox/adblocker-firefoxImportjs.js"></script></head>
