--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../../../favicon.ico">
 
-  <title>Cover Template for Bootstrap</title>
+  <title>Simple Elegant</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
@@ -43,13 +43,8 @@ body {
 
     <main role="main" class="inner cover">
       <div class="col-md-12">
-                            <h2>Live to learn</h2>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                                mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                                magna mollis euismod. Donec sed odio dui. </p>
-                            <p>
-                                <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                            </p>
+                            <h2  href="clock.ico">Live to learn </h2>
+                       
                         </div>
                         <div class="col-md-12">
                             <h2>Learn to create</h2>
