--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body {
     </header>
 
     <main role="main" class="inner cover">
-      <div class="col-md-12">
-                            <h2  href="clock.ico">Live to learn </h2>
+      <div class="icon col-md-12">
+        <i  href="clock.ico"></i> <h2> Live to learn </h2>
                        
                         </div>
                         <div class="col-md-12">
