--- a/simple2.html
+++ b/simple2.html
@@ -16,7 +16,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-.bgimg {background-image: url("bkgdtexture.png")} 
+.bgimg {background-image: url("bkgdtexture.gif")} 
 .bgimg2 {background-image: url("create.png")}
 
 /* Centered text */
@@ -104,7 +104,7 @@ style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
 
   <div class="w3-display-container w3-padding-1 w3-transparent-max w3-opacity w3-center" id="learn">
       <div class="container">
-        <img src="learn.JPG" style="min-height: 100%; width:100%">
+        <img src="learn2.jpg" style="min-height: 100%; width:100%">
         <div>
           <h2 class="centered w3-text-white bold">
             <b>Learn and Grow</b> </div>
@@ -114,7 +114,7 @@ style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
 
     <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="inspirations" >
         <div class="container">
-          <img src="inspirations.JPG" style="height: 100%; width:100%">
+          <img src="inspirations.gif" style="height: 100%; width:100%">
           <div>
             <h1 class="centered w3-text-white bold">
               <b>Inspirations. Appreciations. </b> </div>
