--- a/simple2.html
+++ b/simple2.html
@@ -94,7 +94,7 @@ style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
 
   <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="create" >
     <div class="container">
-      <img src="create.JPG" style="height: 100%; width:100%">
+      <img src="create2.JPG" style="height: 100%; width:100%">
       <div>
         <h1 class="centered w3-text-white bold">
           <b>Create to Learn</b> </div>
@@ -114,7 +114,7 @@ style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
 
     <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="inspirations" >
         <div class="container">
-          <img src="inspirations.gif" style="height: 100%; width:100%">
+          <img src="inspire2.jpg" style="height: 100%; width:100%">
           <div>
             <h1 class="centered w3-text-white bold">
               <b>Inspirations. Appreciations. </b> </div>
