--- a/simple-stickyicon.html
+++ b/simple-stickyicon.html
@@ -114,7 +114,7 @@ body, html {height: 100%}
 
   <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="create" >
     <div class="container">
-      <img src="create2.JPG" style="height: 100%; width:100%">
+      <img src="create2.jpg" style="height: 100%; width:100%">
       <div>
         <h1 class="centered w3-text-white bold">
           <b>Create to Learn</b> </div>
