--- a/simple-stickyicon.html
+++ b/simple-stickyicon.html
@@ -17,8 +17,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-.bgimg {background-image: url("bkgdtexture.gif")} 
-.bgimg2 {background-image: url("create.png")}
+.bgimg {background-image: url("bkgdtexture.jpg")} 
 
 /* Centered text */
 .centered {
