--- a/simple-stickyicon.html
+++ b/simple-stickyicon.html
@@ -113,7 +113,7 @@ body, html {height: 100%}
 
   <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="create" >
     <div class="container">
-      <img src="create2.jpg" style="height: 100%; width:100%">
+      <img src="create2.jpg" alt= "creative projects" style="height: 100%; width:100% ; background-color:black">
       <div>
         <h1 class="centered w3-text-white bold">
           <b>Create to Learn</b> </div>
@@ -124,7 +124,7 @@ body, html {height: 100%}
  
   <div class="w3-display-container w3-padding-1 w3-transparent-max w3-opacity w3-center" id="learn">
       <div class="container">
-        <img src="learn2.jpg" style="min-height: 100%; width:100%">
+        <img src="learn2.jpg" alt= "daily learning" style="min-height: 100%; width:100%; background-color:black">
         <div>
           <h2 class="centered w3-text-white bold">
             <b>Learn and Grow</b> </div>
@@ -134,7 +134,7 @@ body, html {height: 100%}
 
     <div class="w3-display-container w3-padding-1 w3-transparent w3-opacity w3-center" id="inspirations" >
         <div class="container">
-          <img src="inspire2.jpg" style="height: 100%; width:100%">
+          <img src="inspire2.jpg" alt= "Inspirations & Gratitudes" style="height: 100%; width:100%; background-color:black">
           <div>
             <h1 class="centered w3-text-white bold">
               <b>Inspirations. Appreciations. </b> </div>
