--- a/simple-stickyicon.html
+++ b/simple-stickyicon.html
@@ -116,7 +116,7 @@ body, html {height: 100%}
       <img src="create2.jpg" alt= "creative projects" style="height: 100%; width:100% ; background-color:black">
       <div>
         <h1 class="centered w3-text-white bold">
-          <b>Create to Learn</b> </div>
+          <b>Creative Projects</b> </div>
         </h1>
     </div>
   </div>
@@ -127,7 +127,7 @@ body, html {height: 100%}
         <img src="learn2.jpg" alt= "daily learning" style="min-height: 100%; width:100%; background-color:black">
         <div>
           <h2 class="centered w3-text-white bold">
-            <b>Learn and Grow</b> </div>
+            <b>Daily Learning</b> </div>
           </h2>
       </div>
     </div>
@@ -137,7 +137,7 @@ body, html {height: 100%}
           <img src="inspire2.jpg" alt= "Inspirations & Gratitudes" style="height: 100%; width:100%; background-color:black">
           <div>
             <h1 class="centered w3-text-white bold">
-              <b>Inspirations. Appreciations. </b> </div>
+              <b>Inspirations & Gratitudes </b> </div>
             </h1>
         </div>
       </div>
